--- a/test-output/old/Appium Project Test Suite/methods-not-run.html
+++ b/test-output/old/Appium Project Test Suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.appium.project.test.YoutubeAppiumTest.testPlayVideo</td></tr>
+<tr><td>com.appium.project.test.YoutubeAppiumTest.testSerchVideo</td></tr>
 </table>
