--- a/test-output/old/Appium Project Test Suite/methods.html
+++ b/test-output/old/Appium Project Test Suite/methods.html
@@ -1,2 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Appium Project Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="8f92ff">  <td>17/11/25 20:45:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeClass()[pri:0, instance:com.appium.project.test.YoutubeAppiumTest@46d56d67]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@667026744</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>17/11/25 20:46:28</td>   <td>39366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YoutubeAppiumTest.testPauseVideo(java.lang.String, int)[pri:0, instance:com.appium.project.test.YoutubeAppiumTest@46d56d67]">testPauseVideo</td> 
+  <td>main@667026744</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>17/11/25 20:47:40</td>   <td>111774</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterClass()[pri:0, instance:com.appium.project.test.YoutubeAppiumTest@46d56d67]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@667026744</td>   <td></td> </tr>
 </table>
